--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -54,17 +54,20 @@
 
 	   						 <div class="ui-grid-b">
 	   			 					   <div class="ui-block-a ui-block-a-button immNotifica"><span>
-	  									    <img class="media-object pull-left cardImage notifyImage" src="img/matteo.jpg">
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/matteo.jpg">
 	      								</span></div>
 	   								   <div class="ui-block-b ui-block-b-button">
 	    									  <span class="titolo-notifica">Matteo Polsinelli </span> <br>
 
-							    			    <span class="testo-notifica">ha inviato una richiesta per seguirti </span>
+							    			      <div class="ui-block-c notifyDiv">
+										   <img src="img/add_friend.png" class="notifyIcon">
+										   <span class="testo-notifica">Ha chiesto di Seguirti</span>
+				      				  </div> 
 	    							  </div>
 	   								   <div class="ui-block-c ui-block-c-button">
 	   								   		<span class="center btncontainer">
-											<button class="btn btn_accetta">Accetta</button>
-											<button class="btn btn_rifiuta">Rifiuta</button>
+											<button class="btn btn_accetta btn_richiesta">Accetta</button>
+											<button class="btn btn_rifiuta btn_richiesta">Rifiuta</button>
 											</span>
 				      				  </div>
 	  					     </div>
@@ -76,7 +79,7 @@
 	   						 <div class="ui-grid-b">
 	   			 					   <div class="ui-block-a">
 										   <span>
-	  									    <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
+	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
 	      									</span>
 										</div>
 	   								   <div class="ui-block-b">
@@ -98,7 +101,7 @@
    	   						 <div class="ui-grid-b">
    	   			 					   <div class="ui-block-a">
    										   <span>
-   	  									    <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
+   	  									    <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
    	      									</span>
    										</div>
    	   								   <div class="ui-block-b">
@@ -120,7 +123,7 @@
    						  <div class="ui-grid-b">
    									<div class="ui-block-a">
    										<span>
-   										 <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
+   										 <img class="media-object pull-left cardImage Imagefullwidth" src="img/davide.jpg">
    										 </span>
    									 </div>
    									<div class="ui-block-b">
@@ -142,7 +145,7 @@
    						  <div class="ui-grid-b">
    									<div class="ui-block-a">
    										<span>
-   										 <img class="media-object pull-left cardImage Imagefullwidth notifyImage" src="img/davide.jpg">
+   										 <img class="media-object pull-left cardImage Imagefullwidth " src="img/davide.jpg">
    										 </span>
    									 </div>
    									<div class="ui-block-b">
