--- a/www/home.html
+++ b/www/home.html
@@ -81,11 +81,11 @@
 
 			<div id="accordionmenu" data-role="collapsible-set" data-collapsed-icon="carat-r" data-expanded-icon="carat-d">
 
-				<div  data-role="collapsible">
+				<div  data-collapsed="false" data-role="collapsible">
 
-					<h3 class="bordo_verde" >Polo Coppito <span class="infoFollowersNavigation" id="infoFollowersNavigation" hidden>6</span></h3>
+					<h3  id="coppito_nav" class="bordo_verde" >Polo Coppito <span class="" > <img class="infoposition media-object " src="img/location_polo.png"></span> <span class="infoFollowersNavigation" id="infoFollowersNavigation" hidden>6</span></h3>
 
-					<div data-role="collapsible">
+					<div  data-role="collapsible">
 			        	<h3>Coppito 0<span class="infoFollowersNavigation" id="poloCoppito0Followers" hidden>2</span></h3>
 
 						<div data-role="collapsible">
@@ -102,16 +102,16 @@
 
 			    	</div>
 
-					<div  data-role="collapsible">
-			        	<h3 class="bordo_verde" id="Coppito_1">Coppito 1<span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
+					<div  data-collapsed="false" data-role="collapsible">
+			        	<h3 class="bordo_verde" id="Coppito_1">Coppito 1 <span class="" > <img class="infoposition media-object " src="img/location_polo.png"></span><span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
 
-						<div data-role="collapsible">
-				        	<h3 class="bordo_verde" id="P0_C1" >Piano 0 <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
+						<div data-collapsed="false" data-role="collapsible">
+				        	<h3 class="bordo_verde" id="P0_C1" >  Piano 0 <span class="" > <img class="infoposition media-object " src="img/location_polo.png"></span> <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
 							<div id="P0Coppito1">
 							</div>
 				    	</div>
 
-						<div data-role="collapsible" >
+						<div  data-role="collapsible" >
 				        	<h3 id="P1_C1">Piano 1</h3>
 							<div id="P1Coppito1">
 							</div>
