--- a/www/profile_visitato.html
+++ b/www/profile_visitato.html
@@ -97,7 +97,7 @@
 						</a>
 						
 						 <li class="table-view-cell pulito">
-							<a class="navigate-right"  href="corsiProfiloVisitato.html" data-transition="slide">
+							<a class="navigate-right"  data-ignore="push" href="corsiProfiloVisitato.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Corsi seguiti
