--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
 							
 				 <li class="table-view-cell media title_widget ">
 				         <a>
-							   <span class="media-body">Aggiungi Widget</span> 
+							   <span class="media-body add_widget_title">Aggiungi Widget</span> 
 							   
 								 </a>
 				 </li>
