--- a/www/home.html
+++ b/www/home.html
@@ -68,7 +68,7 @@
 		<div class="filter bar bar-standard bar-header-secondary">
 				<div class="segmented-control ">
 				    <a id="aulebar" class="control-item active">Aule</a>
-				    <a id="followerbar" class="control-item">Following</a>
+				    <a id="followerbar" class="control-item">Amici</a>
 				    <a id="profbar" class="control-item">Professori</a>
 					<a id="ufficiobar" class="control-item">Uffici</a>
 		  		</div>
