--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -101,7 +101,7 @@
 												<span class="testo-notifica">dovrebbe trovarsi in Aula 1.6 di Coppito 1 </span>
 									   </div>
 	   								   <div class="ui-block-c notifyDiv">
-										   <img src="img/launchpad.png" class="notifyIcon">
+										   <img src="img/launchpad_b.png" class="notifyIcon">
 										   <span class="testo-notifica">24 minuti fa</span>
 				      				  </div>
 	  					     	</div>
@@ -196,7 +196,7 @@
 					</span>
 				</a>
 
-				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+				<a class="tab-item tab-item-selected" data-ignore="push" href="gestione_notifiche.html">
 					<span class="media-object">
 						<img src="img/notifiche.png" class="followersImage">
 					</span>
