--- a/www/gestisciPrivacy.html
+++ b/www/gestisciPrivacy.html
@@ -116,7 +116,7 @@
 			<div class="card">
 				<ul class="table-view">
 					<li class="table-view-cell">
-						Permetti la segnalazione della tua posizione
+						Permetti di avvistarti
 						<div class="toggle">
 							<div class="toggle-handle"></div>
 						</div>
