--- a/www/home.html
+++ b/www/home.html
@@ -148,11 +148,11 @@
 
 
 			<nav class="bar bar-tab">
-	  			<a class="tab-item active tab-item-selected" data-ignore="push" href="index.html">
+	  			<a class="tab-item active" data-ignore="push" href="index.html">
 	    			<span class="icon icon-home"></span>
 	  			</a>
 
-				<a class="tab-item" data-ignore="push" href="home.html">
+				<a class="tab-item tab-item-selected" data-ignore="push" href="home.html">
 					<span class="media-object">
 						<img src="img/launchpad.png" class="followersImage">
 					</span>
