--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -52,11 +52,11 @@
 		</header>
 
 		<div id="myPopover" class="popover">
-		  <header class="bar bar-nav">
+		  <header class="bar bar-nav header-popup">
 		    <h1 class="title">Ordina per:</h1>
 		  </header>
 		  <ul class="table-view">
-		    <li class="table-view-cell">Alfabetico</li>
+		    <li class="table-view-cell alpha-margin">Alfabetico</li>
 			<a>
 				<span class="media-object pull-left icon icon-check"></span>
 				<div class="media-body">
@@ -106,7 +106,7 @@
 						<img src="img/notifiche.png" class="followersImage">
 					</span>
 				</a>
-				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+				<a class="tab-item tab-item-selected" data-ignore="push" href="listaFollowers.html">
 					<span class="media-object">
 						<img src="img/followers.png" class="followersImage">
 					</span>
