--- a/www/menu.html
+++ b/www/menu.html
@@ -1,9 +1,8 @@
 		<div  class="content menu-border menu-color">
 			<ul class="table-view menu-color">
 			
-			<li class="table-view-cell media">
-				   <a id="close_menu" class="icon icon-right-nav pull-left">
-				      
+			<li class="table-view-cell media menu-li ">
+				      <a id="close_menu" class="text-white menu-title ">
 				      <div id="menu-title" class="media-body pull-right">
 				        Menu
 				      </div>
@@ -11,29 +10,29 @@
 	  			</li>
 			
 				<li class="table-view-cell media">
-				    <a class="navigate-right" data-ignore="push" href="profile.html">
-				      <span class="media-object pull-left icon icon-person"></span>
+				    <a class="navigate-right text-white" data-ignore="push" href="profile.html">
+				      <span class="media-object pull-left icon icon-person icon_profilo_utente"></span>
 				      <div class="media-body">
 				        Gestione Profilo
 				      </div>
 				    </a>
 	  			</li>
 				<li class="table-view-cell media">
-				    <a class="navigate-right" data-ignore="push" href="lista_poli_per_gestione.html">
-					  <span class="media-object pull-left">
-						<img src="img/polo.png" class="followersImage  icone">
+				    <a class="navigate-right text-white" data-ignore="push" href="lista_poli_per_gestione.html">
+					  <span class="media-object pull-left menu-margin-poli">
+						<img src="img/polo_w.png" class="followersImage  icone">
 					  </span>
 				      <div class="media-body">
 				        Gestione Poli
 				      </div>
 				    </a>
 				</li>
-				<li class="table-view-cell media">
+				<li class="table-view-cell media text-white">
 				    <a >
-				     <span class="media-object pull-left">
-						<img src="img/logout.png" class="followersImage icone">
+				     <span class="media-object pull-left menu-margin-poli">
+						<img src="img/logout_w.png" class="followersImage icone">
 					</span>
-				      <div class="media-body">
+				      <div class="media-body text-white">
 				        Logout
 				      </div>
 				    </a>
