--- a/www/selezionaAvvistamento.html
+++ b/www/selezionaAvvistamento.html
@@ -18,7 +18,7 @@
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
 		<link href="css/accordion.css" rel="stylesheet">
 		<link href="libs/SnapJs/snap.css" rel="stylesheet">
-		<link href="css/followers.css" rel="stylesheet">
+		
 
 
     	<!-- Include the compiled Ratchet JS -->
@@ -41,7 +41,7 @@
 			<a id="menu_btn" class="icon icon-bars pull-left"></a>
 			<a class="icon icon-compose pull-right" data-ignore="push" href="cambiaStatus.html"></a>
 			<a class="icon icon-search pull-right" data-ignore="push" href="ricerca.html"></a>
-			<h2 id= "titleNavigation" class="titleNavigation">Scegli chi segnalare</h2>
+			<h2 id= "titleNavigation" class="titleNavigation">Scegli chi avvistare</h2>
 		</header>
 
 
@@ -72,7 +72,7 @@
 					</span>
 				</a>
 
-					<a class="tab-item" data-ignore="push" href="selezionaAvvistamento.html">
+					<a class="tab-item tab-item-selected" data-ignore="push" href="selezionaAvvistamento.html">
 					<span class="media-object">
 						<img src="img/profMirino.png" class="followersImage">
 					</span>
@@ -91,7 +91,7 @@
 
 			</nav>
 
-
+<link href="css/followers.css" rel="stylesheet">
 	</body>
 
 
