--- a/www/auleVicine.html
+++ b/www/auleVicine.html
@@ -73,7 +73,7 @@
 		</div>
 
 
-		<div id="filtroAule" class="content snap-content">
+		<div id="filtroAule" class="filter bar bar-standard bar-header-secondary">
 			<div class="filter">
 				<div class="segmented-control">
 				    <a id="libere" class="control-item active">Libere</a>
@@ -81,10 +81,12 @@
 		  		</div>
 			</div>
 
-			<div id="aule">
-			</div>
+			
 			
 		</div>
+		
+		<div id="aule" class="content">
+			</div>
 			
 		<!-- Tab Bar -->
 				<nav class="bar bar-tab">
