--- a/www/corsiDaDash.html
+++ b/www/corsiDaDash.html
@@ -50,7 +50,7 @@
 		</div>
 
 
-		<div id="filtroAule" class="content snap-content">
+		<div id="filtroAule" class="filter bar bar-standard bar-header-secondary">
 			<div class="filter">
 				<div class="segmented-control">
 				    <a id="seguiti" class="control-item active">Seguiti</a>
@@ -58,10 +58,12 @@
 		  		</div>
 			</div>
 
-			<div id="corsiDash">
-			</div>
+			
 			
 		</div>
+		
+		<div id="corsiDash" class="content">
+			</div>
 			
 		<!-- Tab Bar -->
 				<nav class="bar bar-tab">
