XO XO FABIO XO XO

--- a/www/schedaPolo.html
+++ b/www/schedaPolo.html
@@ -66,7 +66,7 @@
 
 					<li class="table-view-cell pulito">
 						<a>
-						   <span class="media-object pull-left icon icon-pages"></span>
+						   <span class="media-object pull-left icon icon-pages icon-pages_polo"></span>
 							Notifiche Status
 							<div class="toggle">
 								<div class="toggle-handle"></div>
@@ -76,7 +76,7 @@
 
 					<li class="table-view-cell pulito">
 						<a>
-						   <span class="media-object pull-left icon icon-pages"></span>
+						   <span class="media-object pull-left icon icon-pages icon-pages_polo"></span>
 						   Ambiente intelligente
 						   		<span id="infoAmbienteIntelligente" class="icon icon-info"></span>
 					   		
